--- a/app/src/main/res/layout/transport_item.xml
+++ b/app/src/main/res/layout/transport_item.xml
@@ -4,7 +4,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     card_view:layout_constraintRight_toRightOf="parent"
     card_view:layout_constraintTop_toTopOf="parent"
-    android:layout_width="170dp"
+    android:layout_width="match_parent"
     android:layout_margin="10dp"
     android:layout_height="wrap_content"
     card_view:cardElevation="15dp">
