--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name ="grey">#B5B2B2</color>
     <!-- PALETA DE COLORES -->
     <color name="lapis_lazuli">#1C5D99</color>
     <color name="cadet_blue">#639FAB</color>
