BUG CORNERS NO TRANSPARENTES ARREGLADO

--- a/app/src/main/res/layout/mod_add_layout.xml
+++ b/app/src/main/res/layout/mod_add_layout.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/fondo">
-
     <include
         android:id="@+id/toolbarAdd"
         layout="@layout/toolbar" />
@@ -218,7 +217,7 @@
             <ListView
                 android:id="@+id/lstItinerariAdd"
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:fillViewport="true"
                 app:layout_constraintLeft_toLeftOf="parent"
