--- a/app/src/main/res/layout/dialog_input.xml
+++ b/app/src/main/res/layout/dialog_input.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:backgroundTint="@color/white">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardDialog"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="24dp"
         app:cardElevation="0dp"
+        app:cardCornerRadius="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,8 +19,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
-            android:paddingBottom="16dp">
+            android:paddingBottom="16dp"
+            android:background="@color/white">
 
             <TextView
                 android:id="@+id/txtHeader"
@@ -43,6 +44,7 @@
                 android:layout_marginTop="16dp"
                 android:hint="Nom Localització"
                 android:textColorHint="@color/grey"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txtHeader" />
@@ -55,6 +57,7 @@
                 android:layout_marginTop="16dp"
                 android:hint="Latitud"
                 android:textColorHint="@color/grey"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/dialogNomIter" />
@@ -67,11 +70,13 @@
                 android:layout_marginTop="16dp"
                 android:hint="Longitud"
                 android:textColorHint="@color/grey"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/dialogLatitudIter" />
 
             <Button
+                android:id="@+id/btnGuardarNouItinerari"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_constraintEnd_toEndOf="parent"
