cambio fondo y galeria acabada

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="cadet_blue">#639FAB</color>
     <color name="eerie_black">#222222</color>
     <color name="light_steel_blue">#bbcde5</color>
+    <color name="grey_white">#ECF0F1</color>
 </resources>
