--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -16,7 +16,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:background="@color/light_steel_blue">
+                    android:background="@color/grey_white">
                         <LinearLayout
                             android:id="@+id/infoItem"
                             android:layout_width="0dp"
