--- a/app/src/main/res/layout/iter_item.xml
+++ b/app/src/main/res/layout/iter_item.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:background="@color/light_steel_blue">
+            android:background="@color/grey_white">
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_weight="1"
