--- a/app/src/main/res/layout/mod_add_layout.xml
+++ b/app/src/main/res/layout/mod_add_layout.xml
@@ -34,7 +34,7 @@
                 android:textStyle="bold"
                 android:textSize="20sp"/>
 
-            <ImageButton
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/btnAddPrincipalImg"
                 android:layout_width="180dp"
                 android:layout_height="100dp"
@@ -42,8 +42,11 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="50dp"
+                android:scaleType="fitXY"
                 android:background="@drawable/rounded_imgbtn"
-                android:src="@drawable/ic_baseline_add_24"
+                android:src="@drawable/islasgriegas"
+                app:shapeAppearance="@style/ImageRounded"
+                android:clickable="true"
                 />
 
             <TextView
@@ -60,16 +63,19 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtImatgePrincipalAdd" />
 
-            <ImageButton
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/btnAddSecundariaImg"
                 android:layout_width="150dp"
                 android:layout_height="70dp"
                 android:layout_marginLeft="40dp"
                 android:layout_marginTop="34dp"
+                android:scaleType="fitXY"
                 android:background="@drawable/rounded_imgbtn"
                 app:layout_constraintLeft_toRightOf="@+id/txtImatgeSecundariaAdd"
                 app:layout_constraintTop_toBottomOf="@+id/btnAddPrincipalImg"
-                android:src="@drawable/ic_baseline_add_24"/>
+                android:src="@drawable/ic_baseline_add_24"
+                android:clickable="true"
+                app:shapeAppearance="@style/ImageRounded"/>
 
 
             <LinearLayout
