--- a/app/src/main/res/values/custom_styles.xml
+++ b/app/src/main/res/values/custom_styles.xml
@@ -4,4 +4,11 @@
         <item name="cornerSizeBottomRight">150dp</item>
         <item name="cornerFamilyBottomRight">rounded</item>
     </style>
+    <style name="ImageRounded">
+        <item name="cornerSizeBottomRight">20dp</item>
+        <item name="cornerSizeBottomLeft">20dp</item>
+        <item name="cornerSizeTopRight">20dp</item>
+        <item name="cornerSizeTopLeft">20dp</item>
+        <item name="cornerFamilyBottomRight">rounded</item>
+    </style>
 </resources>
