--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -13,15 +13,15 @@
 
     <GridView
         android:id="@+id/gridGallery"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-
         android:numColumns="2"
         android:verticalSpacing="10dp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbarGallery"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
