--- a/app/src/main/res/menu/mod_menu.xml
+++ b/app/src/main/res/menu/mod_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_favorite"
-        android:icon="@drawable/trash"
+        android:id="@+id/delete"
+        android:icon="@drawable/ic_baseline_delete_24"
         android:title="trash"
         app:showAsAction="always"/>
 </menu>
