--- a/app/src/main/res/layout/mod_add_layout.xml
+++ b/app/src/main/res/layout/mod_add_layout.xml
@@ -225,7 +225,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/lstItinerariAdd"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
