--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -8,6 +8,7 @@
     android:elevation="4dp">
 
     <TextView
+        android:id="@+id/titleToolBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
