--- a/app/src/main/res/menu/llistat_menu.xml
+++ b/app/src/main/res/menu/llistat_menu.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
         <item
-            android:id="@+id/action_favorite"
+            android:id="@+id/search_button"
             android:icon="@drawable/ic_baseline_search_24"
             android:title="SEARCH"
-            app:showAsAction="always"/>
+            app:showAsAction="always"
+            app:actionViewClass="androidx.appcompat.widget.SearchView" />
 </menu>
