--- a/app/src/main/res/layout/mod_add_layout.xml
+++ b/app/src/main/res/layout/mod_add_layout.xml
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:text="Imatge\nPrincipal"
+                android:text="Imatge\nDetall"
                 android:fontFamily="@font/lexendex_light"
                 android:textColor="@color/lapis_lazuli"
                 android:layout_marginTop="40dp"
@@ -58,7 +58,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="68dp"
                 android:fontFamily="@font/lexendex_light"
-                android:text="Imatge\nSecundària"
+                android:text="Imatge\nLlistat"
                 android:textColor="@color/lapis_lazuli"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -69,7 +69,7 @@
                 android:id="@+id/btnAddSecundariaImg"
                 android:layout_width="150dp"
                 android:layout_height="70dp"
-                android:layout_marginLeft="40dp"
+                android:layout_marginLeft="68dp"
                 android:layout_marginTop="34dp"
                 android:scaleType="fitXY"
                 android:background="@drawable/rounded_imgbtn"
@@ -123,7 +123,6 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:hint="Nom del Paquet"
                     android:maxLines="1"
                     android:background="@drawable/rounded_edittxt"
                     android:layout_marginRight="5dp"
@@ -191,7 +190,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/edtxtDescripcio"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:text="Graus Google Maps"
+                android:text="Zoom Google Maps"
                 android:fontFamily="@font/lexendex_light"
                 android:textColor="@color/eerie_black"
                 android:layout_marginTop="30dp"
